objects/agf__QA_Test_Case__c.object
<CustomObject>
    <description>QAForce2 Test Case Object</description>
    <fields>
        <fullName>agf__Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Count_Automated_Executions__c</fullName>
        <description>Count the number of completed automated executions</description>
        <inlineHelpText>Count the number of completed automated executions</inlineHelpText>
        <label>Count Automated Executions</label>
        <summaryFilterItems>
            <field>agf__QA_Test_Execution__c.agf__Type__c</field>
            <operation>equals</operation>
            <value>Ftest, Silktest, Utest, .Net, Client Automation, Selenium, ProdTest - Extended, ProdTest - API, ProdTest - Selenium</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>agf__QA_Test_Execution__c.agf__Status__c</field>
            <operation>equals</operation>
            <value>Passed, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__QA_Test_Execution__c.agf__Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Count_Automation_To_Complete__c</fullName>
        <description>Counts the number of automated executions that are not done</description>
        <inlineHelpText>Counts the number of automated executions that are not done</inlineHelpText>
        <label>Count Automation To Complete</label>
        <summaryFilterItems>
            <field>agf__QA_Test_Execution__c.agf__Type__c</field>
            <operation>equals</operation>
            <value>Ftest, Silktest, Utest, .Net, Client Automation, Selenium, ProdTest - Extended, ProdTest - API, ProdTest - Selenium</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>agf__QA_Test_Execution__c.agf__Status__c</field>
            <operation>notEqual</operation>
            <value>Passed, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__QA_Test_Execution__c.agf__Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Execution_Type__c</fullName>
        <label>Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End To End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boundary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silktest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI - script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProdTest - Selenium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProdTest - API</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Ftest_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Ftest Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Is_Automated__c</fullName>
        <description>Value is 1 if there is at least one completed execution of types ftest/prodtest/silk/selenium, or if the test case ftest ID is non-null (workaround for an old bug in the annotation uploader) Value is 0 otherwise</description>
        <formula>if( agf__Count_Automated_Executions__c &gt; 0, 1, if( LEN(agf__Ftest_Id__c)&gt;0, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A test case is automated when the ftest ID field of any of its children if non-null OR when there is a child execution with type=ftest/prodtest/silk/selenium and its status is Passed</inlineHelpText>
        <label>Automation Completed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Is_Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Manual_Auto_Annotation__c</fullName>
        <description>Formula that states if a test case has any executions of an automation type.</description>
        <formula>if (and(agf__Count_Automated_Executions__c &lt;= 0,0=LEN(agf__Ftest_Id__c)),&quot;Manual&quot;, if (OR(ISNULL(agf__Ftest_Id__c), LEN(agf__Ftest_Id__c) == 0), &quot;Automated w/o Annotation&quot;, &quot;Automated and Annotated&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Can be in one of three values:
Manual, Automated, and Incomplete Automation.
Incomplete Automation = invalid annotation or Execution not Marked as Passed or Failed</inlineHelpText>
        <label>Is Automated and Annotated?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of this test case in the hierarchy.</description>
        <inlineHelpText>Order of this test case in the hierarchy</inlineHelpText>
        <label>Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00ND0000001rflAMAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Steps_to_Reproduce__c</fullName>
        <defaultValue>&quot;No description&quot;</defaultValue>
        <description>Details of the test case. Setup info, steps to follow, etc.
Leave the expected results out. There is field for that</description>
        <inlineHelpText>Details of the test case. Setup info, steps to follow, etc.</inlineHelpText>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will be automatically populated if the test case has a test execution, otherwise it can be manually populated.</inlineHelpText>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Brief_Description__c</columns>
        <columns>agf__Hierarchy__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Manual_Auto_Annotation__c</columns>
        <columns>agf__Is_Obsolete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{00000000}</displayFormat>
        <label>Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Invalid_Priority_Value</fullName>
        <active>false</active>
        <description>Users should use a valid picklist value</description>
        <errorConditionFormula>CASE(  agf__Priority__c  ,

&quot;High&quot;, 1,

&quot;Medium&quot;, 1,

&quot;Low&quot;, 1,

&quot;&quot;,1,

0) = 0</errorConditionFormula>
        <errorDisplayField>agf__Priority__c</errorDisplayField>
        <errorMessage>Incorrect Priority Value. Must be: High, Medium, or Low</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Order</fullName>
        <active>false</active>
        <description>Throw error message when Order is negative</description>
        <errorConditionFormula>agf__Order__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>agf__Order__c</errorDisplayField>
        <errorMessage>Order cannot be Negative</errorMessage>
    </validationRules>
</CustomObject>